[gd_scene load_steps=12 format=2]

[ext_resource path="res://UI/Buttons/Start button normal.png" type="Texture" id=1]
[ext_resource path="res://UI/Buttons/Start button pressed.png" type="Texture" id=2]
[ext_resource path="res://UI/XPerience Logo.png" type="Texture" id=3]
[ext_resource path="res://SoundEffects/ButtonClickSoundEffect 2.wav" type="AudioStream" id=4]
[ext_resource path="res://Font/quaver.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://MeetingRoom.tscn" type="PackedScene" id=6]
[ext_resource path="res://FadeInBlack/FadeIn.tscn" type="PackedScene" id=7]
[ext_resource path="res://StartButton.gd" type="Script" id=8]
[ext_resource path="res://TitleScreen.gd" type="Script" id=9]
[ext_resource path="res://Menu Buttons.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]
size = 18
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 9 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 80.0
margin_top = 40.0
margin_right = 1200.0
margin_bottom = 680.0
mouse_filter = 2

[node name="MeetingRoom" parent="Menu" instance=ExtResource( 6 )]
position = Vector2( -80, -40 )

[node name="TextureRect" type="TextureRect" parent="Menu"]
margin_right = 1120.0
margin_bottom = 293.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.73
texture = ExtResource( 3 )
expand = true

[node name="CenterContainer" type="CenterContainer" parent="Menu"]
margin_top = 297.0
margin_right = 1120.0
margin_bottom = 466.0
mouse_filter = 2
size_flags_vertical = 3

[node name="Version Label" type="Label" parent="Menu"]
margin_top = 470.0
margin_right = 1120.0
margin_bottom = 640.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "
Version 0344255
Jane Chong Yun Ann 
Gamification of User Centricity
"
valign = 2

[node name="CenterRow" type="HBoxContainer" parent="."]
margin_left = 520.0
margin_top = 128.0
margin_right = 774.0
margin_bottom = 683.0
size_flags_vertical = 3

[node name="Button" type="VBoxContainer" parent="CenterRow"]
margin_right = 254.0
margin_bottom = 555.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="TextureButton" type="TextureButton" parent="CenterRow/Button"]
margin_top = 239.0
margin_right = 254.0
margin_bottom = 315.0
mouse_filter = 1
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
script = ExtResource( 8 )
scene_to_load = "res://LoadingScreen.tscn"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="CenterRow/Button/TextureButton"]
stream = ExtResource( 4 )
volume_db = 5.0

[node name="FadeIn" parent="." instance=ExtResource( 7 )]
visible = false

[node name="MenuButtons" parent="." instance=ExtResource( 10 )]

[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
